[PE] Invalidate collapsed borders when cell's visibility changes

Cell's visibility affects painted result of collapsed borders (see
CollapsedBorderPainter::PaintCollapsedBorders). We need to invalidate
collapsed borders when cell's visibility changes. The solution is not
optimal because the collapsed border values won't change (we just need
to repaint), but it's a solution with minimal change.

Bug: 784822
Change-Id: I1f5c533f0e44d8afb32d399c87efa04b9da05802
Reviewed-on: https://chromium-review.googlesource.com/773401
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517574}
Former-commit-id: 2067cb293a3ae01ac4c80f32d2ea6960849b220f