third_party/WebKit/Source/core/layout/LayoutTableCell.cpp
@@ -457,6 +457,12 @@ void LayoutTableCell::StyleDidChange(StyleDifference diff,
   if (!table)
     return;
 
+  if (old_style->Visibility() != StyleRef().Visibility() &&
+      table->ShouldCollapseBorders()) {
+    table->InvalidateCollapsedBorders();
+    collapsed_borders_need_paint_invalidation_ = true;
+  }
+
   LayoutTableBoxComponent::InvalidateCollapsedBordersOnStyleChange(
       *this, *table, diff, *old_style);
 
